<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtUsuario"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtUsuario" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cajaUsuario"
        android:layout_gravity="center_horizontal"
        android:text="gogochillo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtContraseña"
        android:id="@+id/txtContraseña"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/cajaContraseña"
        android:text="juego" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEntrar"
        android:id="@+id/btnEntrar"
        android:layout_gravity="center_horizontal"
        android:onClick="entrarMenu" />

</LinearLayout>